syntax = "proto3";

option java_package = "com.tudb.blockchain.network";

package com.tudb.blockchain.network;

service TuQueryService {
  rpc HopQuery (HopQueryRequest) returns (QueryResponse) {}
}

message HopQueryRequest {
  string chainName = 1;
  string tokenName = 2;
  string address = 3;
  string direction = 4;
  int32 lowerHop = 5;
  int32 upperHop = 6;
  int32 limit = 7;
}

message QueryResponse {
  string result = 1;
  string message = 2;
}